# mesh

./: .gitignore  Makefile  README.md  cli.py  mesh.py  pyproject.toml
mesh/: __init__.py  cohere_handler.py  network.py  network_cli.py
mesh/db_handlers/: __init__.py  base.py  milvus.py  qdrant.py
mesh/handlers/: cohere_handler.py  key_handler.py
mesh/key_handlers/: __init__.py
mesh/model_handlers/: cohere_handler.py
