[tool.poetry]
name = "mesh"
version = "0.1.0"
description = ""
authors = ["Arnav Komaragiri <komaraac@mail.uc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.25.2"
networkx = "^3.1"
cohere = "^4.21"
faiss-cpu = "^1.7.4"
matplotlib = "^3.7.2"
python-dotenv = "^1.0.0"
pymilvus = "^2.3.0"
typer = "^0.9.0"
qdrant-client = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
